style: Reformat all files (changed spaces to tabs)
All spaces in the project should now be tabs, and imports have been cleaned up as well.